--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </p>
       <p>
         This website is hosted on GitHub Pages!
-        <a href="https://USERNAME.github.io/REPO-NAME"
+        <a href="https://pringlesmingles.github.io/lab-6/"
           >https://USERNAME.github.io/REPO-NAME</a
         >
       </p>
