--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p>
         This website is hosted on GitHub Pages!
         <a href="https://pringlesmingles.github.io/lab-6/"
-          >https://USERNAME.github.io/REPO-NAME</a
+          >Rishabh's Page</a
         >
       </p>
     </footer>
